# study

./: note
CppCoroutines-master/: 01.intro.cpp
CppCoroutines-master/04.task/: CMakeLists.txt  Task.h  TaskAwaiter.h  TaskPromise.h  a.out  main.cpp
CppCoroutines-master/04.task/b1/: CMakeCache.txt  Makefile  cmake_install.cmake  coroutine-task
CppCoroutines-master/05.dispatcher/: CMakeLists.txt  DispatchAwaiter.h  Executor.h  TaskAwaiter.h  TaskPromise.h  main.cpp
CppCoroutines-master/05.dispatcher/b1/: CMakeCache.txt  Makefile  cmake_install.cmake  coroutine-task
CppCoroutines-master/09.http/: CMakeLists.txt  Executor.h  conanfile.txt  main.cpp
CppCoroutines-master/build-dir/: 01.intro.cpp  02.sequence.cpp  02.sequence_2.cpp  03.functional.cpp  CMakeCache.txt  Makefile  cmake_install.cmake
docs/: 渡劫 C++ 协程（0）：前言 _ Benny Huo.mhtml  渡劫 C++ 协程（10）：后记 _ Benny Huo.mhtml  渡劫 C++ 协程（1）：C++ 协程概览 _ Benny Huo.mhtml  渡劫 C++ 协程（2）：实现一个序列生成器 _ Benny Huo.mhtml  渡劫 C++ 协程（3）：序列生成器的泛化和函数式变换 _ Benny Huo.mhtml  渡劫 C++ 协程（4）：通用异步任务 Task _ Benny Huo.mhtml  渡劫 C++ 协程（5）：协程的调度器 _ Benny Huo.mhtml  渡劫 C++ 协程（6）：基于协程的挂起实现无阻塞的 sleep _ Benny Huo.mhtml  渡劫 C++ 协程（7）：用于协程之间消息传递的 Channel _ Benny Huo.mhtml  渡劫 C++ 协程（8）：通用 Awaiter _ Benny Huo.mhtml  渡劫 C++ 协程（9）：一个简单的示例 _ Benny Huo.mhtml
recipes-master/logging/: LogStream.h  Logging.cc  README
recipes-master/reactor/: reactor_lib.mk
recipes-master/reactor/s00/: test1.cc
recipes-master/reactor/s01/: test3.cc
recipes-master/reactor/s06/: Acceptor.cc  Channel.cc  EventLoop.cc  Poller.cc  TcpConnection.cc  TcpServer.cc  TimerQueue.cc  (+1 more)
(+20 files in other folders)
